test_scores/negative_dimers/features/Q6AI12.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q6AI12.pkl.xz